test/samples/valid/interp/global.maruir
struct Foo<M> {
	a: u8;
	b: u8[] *M;
}

var a: u256 = 1_u256

var b: u256[] * #exception = [1_u256, 2_u256, 3_u256]

var c: Foo<#exception> * #exception = {
	a: 4_u8,
	b: [42_u8, 43_u8, 44_u8]
}

fun foo() {
	entry:
		a := 2_u256;
		return;
}

fun main()
locals x: u256,
	   y: u256[] * #exception,
	   z: Foo<#exception> *#exception,
	   w: u8[] *#exception;
{
	entry:
		x := a;
		y := b;
		z := c;
		load z.b in w;

		assert a == 1_u256;
		call foo();
		assert a == 2_u256;
		return;
}
